[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyubilling"
version = "2.0.0"
description = "Async Python client for the Ubilling XMLAgent API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Fenicu" },
]
keywords = ["ubilling", "xmlagent", "isp", "billing", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "yarl>=1.22.0",
]

[project.urls]
Repository = "https://github.com/Fenicu/UbillingWrapper"

[tool.hatch.build.targets.wheel]
packages = ["src/pyubilling"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
